--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0 auto;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 14px;
   line-height: 25px;
   font-weight: 300;
@@ -44,14 +44,16 @@ body {
   background: url("images/1.png") center no-repeat;
   background-size: cover;
 }
+
 .header__container {
   padding: 140px 0 106px 0;
-  max-width: 600px;
 }
+
 .header__icon {
   margin: 130px 0 84px 0;
   height: 66px;
 }
+
 .header__title {
   font-size: 54px;
   line-height: 1.2;
@@ -59,28 +61,35 @@ body {
   letter-spacing: 0.16em;
   margin-bottom: 40px;
 }
+
 .header__text {
   font-family: Lato;
   font-size: 15px;
   line-height: 29px;
   font-weight: 400;
   letter-spacing: 0.06em;
-  margin-bottom: 130px;
+  max-width: 600px;
+  display: block;
+  margin: 0 auto 130px auto;
 }
+
 .header__scroll {
   margin-top: 110px;
 }
 
 .about__container {
-  padding: 150px;
+  padding: 150px 0;
 }
+
 .about__title {
   margin-bottom: 60px;
 }
+
 .about__wide-paragraph {
   width: 450px;
   margin: 0 auto;
 }
+
 .about__text {
   margin: 0 auto 30px auto;
 }
@@ -89,17 +98,21 @@ body {
   background: url("images/2.png") center no-repeat;
   background-size: cover;
 }
+
 .services__container {
   padding: 114px 0 108px 0;
 }
+
 .services__fieldset {
   border: 2px solid #ffffff;
   padding-bottom: 30px;
 }
+
 .services__title {
   color: #ffffff;
   margin-bottom: 38px;
 }
+
 .services__text {
   color: #ffffff;
   margin: 0 auto;
@@ -111,12 +124,15 @@ body {
 .what-we-do__container {
   padding: 104px 0 114px 0;
 }
+
 .what-we-do__title {
   margin-bottom: 112px;
 }
+
 .what-we-do__icon {
   margin-bottom: 40px;
 }
+
 .what-we-do__subtitle {
   margin-bottom: 38px;
   font-size: 20px;
@@ -126,6 +142,7 @@ body {
   letter-spacing: 0.16em;
   color: #3c3c3c;
 }
+
 .what-we-do__text {
   margin: 0 auto 110px auto;
   max-width: 545px;
@@ -134,12 +151,13 @@ body {
 .cards__container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: 3fr 10px 3fr;
-  -ms-grid-columns: 1fr 10px 1.4fr 10px 1fr;
+  -ms-grid-rows: (3fr)[2];
+  -ms-grid-columns: 1fr 1.4fr 1fr;
       grid-template: repeat(2, 3fr)/1fr 1.4fr 1fr;
   gap: 10px;
   margin-bottom: 134px;
 }
+
 .cards__card {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -148,33 +166,41 @@ body {
       -ms-flex-align: end;
           align-items: flex-end;
 }
+
 .cards__card {
   padding-top: 16px;
 }
+
 .cards__card:nth-child(1) {
   background: url("images/card1.png") center no-repeat;
   background-size: cover;
 }
+
 .cards__card:nth-child(2) {
   background: url("images/card2.png") center no-repeat;
   background-size: cover;
 }
+
 .cards__card:nth-child(3) {
   background: url("images/card3.png") center no-repeat;
   background-size: cover;
 }
+
 .cards__card:nth-child(4) {
   background: url("images/card4.png") center no-repeat;
   background-size: cover;
 }
+
 .cards__card:nth-child(5) {
   background: url("images/card5.png") center no-repeat;
   background-size: cover;
 }
+
 .cards__card:nth-child(6) {
   background: url("images/card6.png") no-repeat;
   background-size: cover;
 }
+
 .cards__title {
   font-size: 34px;
   line-height: 1.2;
@@ -188,9 +214,11 @@ body {
 .contact__title {
   margin-bottom: 60px;
 }
+
 .contact__text {
   margin: 0 auto 42px auto;
 }
+
 .contact__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -225,7 +253,9 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+
 .footer__icon {
   color: black;
   margin: 64px 36px 64px 0;
 }
+/*# sourceMappingURL=style.css.map */
