--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body {
   border: 2px solid #3c3c3c;
   padding: 0;
   margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .title {
